cookie consent page ready

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,4 +24,4 @@ phases:
     commands:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
-      - echo testing webhook
+      - echo testing again webhook
